Project

General

Profile

Actions

Bug #13779

closed

su: cast between incompatible function types

Added by Toomas Soome over 2 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build error on SPARC with gcc 10:

    ../../sun4/io/su_driver.c:219:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type]
      219 |  (int (*)())asyrsrv,
          |  ^
    ../../sun4/io/su_driver.c:228:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type]
      228 |  (int (*)())asywput,
          |  ^
    cc1: all warnings being treated as errors

Testing done: build/install/boot

Actions #1

Updated by Electric Monk over 2 years ago

  • Gerrit CR set to 1466
Actions #2

Updated by Electric Monk over 2 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit e476cc14bc84d0f0ee2be4b969d558ef54fd2d8f

commit  e476cc14bc84d0f0ee2be4b969d558ef54fd2d8f
Author: Toomas Soome <tsoome@me.com>
Date:   2021-05-10T15:21:17.000Z

    13779 su: cast between incompatible function types
    Reviewed by: Robert Mustacchi <rm@fingolfin.org>
    Reviewed by: Andrew Stormont <andyjstormont@gmail.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF