13779 su: cast between incompatible function types Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>